# GitHub-visualizer

./: .gitignore  docker-compose.yml
.github/workflows/: github-actions.yml
archive_reader/: Cargo.toml  Dockerfile
archive_reader/src/: main.rs
data/: country_meta.json  samples.csv
data_enricher/: Cargo.toml  Dockerfile
data_enricher/src/: main.rs
data_synchronizer/: Cargo.toml  Dockerfile
data_synchronizer/src/: main.rs
deploy/: archive-reader-deploy.yaml  data-enricher-deploy.yaml  data-synchronizer.yaml  frontend-deploy.yaml  nats-config-configmap.yaml  nats-deploy.yaml  nats-seed-deploy.yaml  preprocessed-data-pvc.yaml  preprocessor-deploy.yaml  sampler-deploy.yaml  websocket-server-deploy.yaml
deploy/ingress/: frontend-ingress.yaml  websocket-server-ingress.yaml
deploy/services/: frontend-service.yaml  nats-service.yaml  sampler-service.yaml  websocket-server-service.yaml
nats/: docker-compose.yml
nats/nats_conf/: nats-server.conf  nats-server1.conf
preprocess/: Dockerfile  make_test_data.py  preprocess.py  requirements.txt
react-frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
react-frontend/src/: App.jsx  index.css
react-frontend/src/components/: ActivityMap.jsx  ActivityMap.module.css  StatsHud.jsx  StatsHud.module.css
react-frontend/src/hooks/: useActivityStream.js
react-frontend/src/utils/: PingManager.js  mockServer.js
sampler/: Cargo.toml  Dockerfile  README_USAGE.txt
sampler/src/: main.rs
visualizer_protocol/: Cargo.toml
visualizer_protocol/src/: lib.rs
websocket_server/: Cargo.toml  Dockerfile
websocket_server/src/: main.rs
