[package]
name = "archive_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.42", features = ["tokio", "gzip"] }
flate2 = "1.1.9"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["stream"] }
tokio = { version = "1.52.3", features = ["io-std", "macros", "rt"] }
tokio-util = "0.7.18"
