[package]
name = "data_synchronizer"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
chrono = "0.4.45"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.52.3"
serde_json = "1.0.150"
async-nats = "0.49.1"
visualizer_protocol = { path = "../visualizer_protocol"}