[package]
name = "websocket_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
actix-ws = "0.4.0"
async-nats = "0.49.1"
chrono = "0.4.45"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = "1.52.3"
uuid = { version = "1.23.3", features = ["v4"] }
visualizer_protocol = {path = "../visualizer_protocol"}
